# tolerance

./: README.md  pyproject.toml
doc/: ГОСТ 25346-2013 (ISO 286-1_2010). Межгосударственный стандар.docx  ГОСТ 25346-89. Основные нормы взаимозаменяемости. Единая сис.docx
tests/: test_accuracy_standards.py  test_tolerance.py  test_tolerance_fields.py
tolerance/: __init__.py  __main__.py  examples.py
tolerance/core/: __init__.py  tolerance_cls.py
tolerance/core/enumerations/: __init__.py  accuracy_standard_field.py  tolerance_field.py
tolerance/data/: __init__.py
tolerance/data/tables/: __init__.py
